--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,7 +4,6 @@
 </head>
 <body>
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@^2/webcomponents-bundle.js"></script>
-    <script src="https://unpkg.com/tone"></script>
     <script src="https://unpkg.com/@tonejs/ui"></script>
 
     <tone-loader></tone-loader>
@@ -18,6 +17,6 @@
         <tone-sampler collapsed></tone-sampler>
     </tone-content>
 
-    <script src="./index.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
