--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- Prerequisites from package.json -->
+    <script src="vendors~setup.bundle.js"></script>
+    <script src="setup.bundle.js"></script>
+
+    <!-- External dependencies -->
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@^2/webcomponents-bundle.js"></script>
     <script src="https://unpkg.com/@tonejs/ui"></script>
 
@@ -17,6 +22,7 @@
         <tone-sampler collapsed></tone-sampler>
     </tone-content>
 
-    <script src="main.js"></script>
+    <!-- App logic -->
+    <script src="main.bundle.js"></script>
 </body>
 </html>
